--- a/TodoWpf/App.xaml
+++ b/TodoWpf/App.xaml
@@ -1,13 +1,11 @@
-﻿<Application x:Class="MetroApplication1.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml" 
-             Startup="StartupHandler">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Application x:Class="MetroApplication1.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="MainWindow.xaml" Startup="StartupHandler" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:vm="clr-namespace:TodoWpf.ViewModel" mc:Ignorable="d">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Elysium;component/Themes/Generic.xaml"/>
+                <ResourceDictionary Source="/Elysium;component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
