--- a/TodoWpf/MainWindow.xaml
+++ b/TodoWpf/MainWindow.xaml
@@ -1,13 +1,22 @@
-﻿<metro:Window x:Class="TodoWpf.MainWindow"
+﻿<modern:Window x:Class="TodoWpf.MainWindow"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:metro="http://schemas.codeplex.com/elysium"
-              xmlns:params="http://schemas.codeplex.com/elysium/params"
-              params:Design.Theme="Dark"
-              params:Design.AccentBrush="{x:Static metro:AccentBrushes.Blue}"
-              params:Design.ContrastBrush="White"
-              Title="MainWindow" Height="350" Width="525">
-    <Grid>
-
-    </Grid>
-</metro:Window>
+              xmlns:modern="http://schemas.codeplex.com/elysium"
+              Title="Todo WPF" Height="350" Width="525">
+    <DockPanel DataContext="{Binding Source={StaticResource Locator}, Path=MainWindow}">
+        <ItemsControl ItemsSource="{Binding TodoItems}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Grid.Column="0" Content="{Binding Description}" Background="White" Foreground="{Binding ContentColor}"></Label>
+                        <CheckBox Grid.Column="1" IsChecked="{Binding Complete}"></CheckBox>
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </DockPanel>
+</modern:Window>
